# wm

./: Cargo.toml  README.md  patch.txt
.config/dunst/: dunstrc
.config/xmobar/: xmobarrc  xmobarrc_0  xmobarrc_1
.github/workflows/: build.yaml
hooks/: pre-commit
src/: actions.rs  bindings.rs  layouts.rs  lib.rs  main.rs
